...
        <TableContainer>
          <Table>
            <TableHead>
              <TableRow>
                <TableCell>Пользователь</TableCell>
                <TableCell>Роль</TableCell>
                <TableCell align="right">Уровень</TableCell>
                <TableCell align="right">Тесты</TableCell>
                <TableCell align="right">Звёзды</TableCell>
                <TableCell align="right">Очки</TableCell>
                <TableCell>Дата регистрации</TableCell>
                <TableCell align="right">Действия</TableCell>
              </TableRow>
...
